elasticsearch/elasticsearch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elk
spec:
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch
